--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/app-check": "^0.6.4",
     "@mdi/font": "^7.1.96",
     "firebase": "^9.17.2",
     "json-server": "^0.17.2",
