--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "aoe4-guides",
+    "default": "aoe4-guides-dev",
     "dev": "aoe4-guides-dev"
   },
   "targets": {},
