--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,8 @@
 {
   "projects": {
     "default": "aoe4-guides-dev",
-    "dev": "aoe4-guides-dev"
+    "dev": "aoe4-guides-dev",
+    "prod": "aoe4-guides"
   },
   "targets": {},
   "etags": {}
