--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.1.96",
     "firebase": "^9.17.2",
     "json-server": "^0.17.2",
+    "sanitize-html": "^2.10.0",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.45",
     "vue-router": "^4.0.13",
