Initialize cloud functions

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "aoe4-guides-dev",
+    "default": "aoe4-guides",
     "dev": "aoe4-guides-dev",
     "prod": "aoe4-guides"
   },
