--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.1.96",
     "axios": "^1.4.0",
     "firebase": "^9.17.2",
+    "firebase-functions": "^4.4.1",
     "json-server": "^0.17.2",
     "sanitize-html": "^2.10.0",
     "vite-plugin-vuetify": "^1.0.2",
