--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.0.0",
-    "vite-plugin-pwa": "^0.16.4"
+    "vite": "^4.0.0"
   }
 }
