--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@firebase/app-check": "^0.8.2",
     "@mdi/font": "^7.1.96",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.4.0",
     "firebase": "^10.8.0",
     "firebase-functions": "^4.8.0",
