--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.1.96",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.4.0",
+    "easy-speech": "^2.3.1",
     "firebase": "^10.8.0",
     "firebase-functions": "^4.8.0",
     "sanitize-html": "^2.10.0",
