--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "aoe4-guides",
   "version": "1.7.13",
   "private": true,
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
