fix: correct projectId typo in Firebase config and update dependencies
- Fixed typo in projectId from VITE_FIREBASE_PROEJCT_ID to VITE_FIREBASE_PROJECT_ID in src/firebase/index.js.
- Added firebase-tools and g packages to package.json.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "easy-speech": "^2.4.0",
     "firebase": "^10.14.0",
     "firebase-functions": "^4.9.0",
+    "firebase-tools": "^15.3.1",
+    "g": "^2.0.1",
     "sanitize-html": "^2.15.0",
     "scroll-into-view-if-needed": "^3.1.0",
     "vite-plugin-vuetify": "^2.1.1",
